# SOAE-Dashboard

./: .gitignore  AGENTS.md  README.md  app.js  eslint.config.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  utils.js  vite.config.js
.atlas/: tether.yaml
.claude/: settings.json
.claude/commands/: apex:package_repo.md  apex:verify.md
.claude/universal/: index.json  index.yaml
.codex/commands/: apex:diagram.md  invoke-all-skills.md
.codex/universal/: index.json  index.yaml
.github/workflows/: deploy.yml
atlas/: APEX_PROTOCOL.md  README.md
atlas/12_agents/: agents.registry.yaml
atlas/13_skills/: MASTER_INDEX.json  MASTER_INDEX.md  skills.registry.yaml
atlas/14_templates/: templates.registry.yaml
atlas/24_prompt_library/: prompts.registry.yaml
atlas/30_repo_starter/: README.md  starter.registry.yaml
atlas/37_command_protocol/: commands.registry.yaml  trigger_router.yaml
atlas/42_context_compiler/: compiler.registry.yaml
atlas/53_production_readiness/: ATLAS_MISS_LOG.md  README.md
development_skills/: APEX_PROTOCOL.md  README.md
development_skills/25_automation/: automation.registry.yaml  onboarding_validate_tiers.py
development_skills/26_schemas/: schemas.registry.yaml
docs/: ARCHITECTURE MAP.html  SPEC_VS_BUILD_DISCREPANCIES.md
scripts/: copy-to-usb.cmd  copy-to-usb.ps1  portable-server.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src/data/: sampleData.json
src/hooks/: index.js  useDashboardData.js  useFilters.js
src/services/: dataService.js
tests/: utils.test.js
(+1056 files in other folders)
